src/main/java/com/example/demo/error/ErrorResponseDto.java
package com.example.demo.error;

public class ErrorResponseDto {
}
